# ChangeLog for games-arcade/diamond-girl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*diamond-girl-9999 (03 Aug 2015)

  03 Aug 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
  Diamond-girl goes to http://github.com/Peanhua/diamond-girl

  12 Jun 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
  Remove live ebuild : project Hosting on Google Code will close on January 25th, 2016

  04 Oct 2013; Vincent Hardy <vincent.hardy.be@gmail.com> :
  Diamond-girl goes to http://code.google.com/p/diamond-girl/

*diamond-girl-1.25.1 (12 Jun 2015)

  12 Jun 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
  Version bump.

*diamond-girl-1.5 (19 Sep 2011)

  19 Sep 2011; Vincent Hardy <vincent.hardy.be@gmail.com>
  +files/desktop_entry.patch, +metadata.xml:
  Initial import of diamond_girl.
