@@ -1,5 +1,7 @@
 DIST diamond-girl-1.25.2.tar.xz 743824 SHA256 9391929c6122f4dd9a758e2fb8ad4ec1884f5c25b49c8817744bda4ceec4538e SHA512 96bf1ae3cb972647054d4fca7452363eb79fac26cd2343bb4cd9d2a71c276fdfdc74e5f7f8837c80c7445970a1cc6e5ab34db336425cd5b6bf47aa12a9e0bce2 WHIRLPOOL 8d3f00e1d78ab77e8bdfc776b3c8c23c85031fe9a1209c0ab725a93a3f7be641b867df8464cd609073a7133565e455836c8a6256f6d85cd75c2c7b791d36bac4
+DIST diamond-girl-2.0.1.tar.xz 2083656 SHA256 a62fd4f4b24979eb962416958ff74f1e4e59089449f07befc9a327418b6eb700 SHA512 dde2ba06e143b2f8db994e9d66d17b2de7d1f44e624830fc7681ff8d0903bd898681e2c48bd73af2e78f27f5caed76e156a755c68f87839ebdfa7f933e1d70fe WHIRLPOOL a8d18ddbf4e84aa199f06fcfe34c59ec4e111535d7c50b5f1009032eaa54ca885de05fd6fba861a4f221dcaf233bebf191f81a8c700f81950673288be744edab
 EBUILD diamond-girl-1.25.2.ebuild 1847 SHA256 d9e4f6ba895ae53ba999290daa464257adff81b98edd4a3513986e9c9a2e9cdb SHA512 8acb5369ecafe990fa83d7f5aac1af4d6a9b35e88a2836be774b2826b0fa0ff9a519e5b1c084cf92efcc352cc190df74d1bab9d1a99fc687a3e028e2311a39ce WHIRLPOOL b9cba10e10cf63183f8ab82431e027902bf2f73c01ac8f4392e5966a8413513e9c57451734097715d2c6d9a6b8a35b9bafc47e9e13d6afd5b9445fa2f9911982
+EBUILD diamond-girl-2.0.1.ebuild 1704 SHA256 c7dcce6fd2e97b5a0f7d03a60968514d1973fe1ba71d22be054ca60a570b396d SHA512 e9fb24ed2bb7225795b7bdb8143557abce2b32c630b5d85d3fe0306b6fc9b3923ec560addcf20d13ca6aa4e26cd7c4ab53e968f9e4ddd97f96fa0222cc0bd790 WHIRLPOOL 251d82d929314e6b75c9daeb742948756c49109e70137fb7deb50f35b158f826e366640c0357799cf0a0d516f7facd7ae1596b8dfeefe67ab28c3a709abb0b68
 EBUILD diamond-girl-9999.ebuild 1704 SHA256 c7dcce6fd2e97b5a0f7d03a60968514d1973fe1ba71d22be054ca60a570b396d SHA512 e9fb24ed2bb7225795b7bdb8143557abce2b32c630b5d85d3fe0306b6fc9b3923ec560addcf20d13ca6aa4e26cd7c4ab53e968f9e4ddd97f96fa0222cc0bd790 WHIRLPOOL 251d82d929314e6b75c9daeb742948756c49109e70137fb7deb50f35b158f826e366640c0357799cf0a0d516f7facd7ae1596b8dfeefe67ab28c3a709abb0b68
-MISC ChangeLog 832 SHA256 e30861d76c7005bcedf9746917b35739a2bf387d41a7ac807baa990dc786999d SHA512 b4b36c22b57a8faaf86380077bda867a1cb6564ac384e550f8a1e584812fe9a6961e17635444e4de2bad11d4f9f56457d7aef08cd51f2ff1a1c3152de0ff7134 WHIRLPOOL b3a9bb57eaf92c52c84fd4442584b3a56e009c81dcf9888e7ce00e91f273ccc38da1c8c7d58b838a5eecea1605502da05782e1ad1976e56b6f89eda9f98d5e58
+MISC ChangeLog 944 SHA256 bfc97290212c6ce55683ce5af8c1ada2572f153264d1704cec1e381d139131eb SHA512 e6332b894a7091f4960ab8d15ef3c7116c3216456d98a6e65143f71b962d8ddb848ef4914315c357d8a4904e9097f0d02c56768619292ab896005248cc50fe42 WHIRLPOOL 4083e4818cbf29d83c20c4c188eef12624e294ee22a0178c3b72cb6f36251dacaef72436195bd974ba56ad84c08177d0491a3d27ba8d976eca3ecf6ce71c0813
 MISC metadata.xml 644 SHA256 7a8834d310dbec8e25a292d005bc44cdb30b8e605297e9ba501377deebbdd63c SHA512 39c5cebef22a573bbd77ff13da4d250b925cc0864978df5bb05860456b1a879fd4b5c59aa4aee3eec8769ebab148f047c4c1d0ae78e9d4d88460c8ae31b54395 WHIRLPOOL 6ca0e61dd0fef1e7dd8797509d5333a6125a39f2ca180d8c99e97a8be053f2e3a1d3106f4eca5c8bd0e4098cf1fb01fd85678093125be96ef2371cfadbd80c81
