@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*diamond-girl-2.0.1 (04 Oct 2015)
+
+  04 Oct 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
+  Version bump.
+
 *diamond-girl-9999 (03 Aug 2015)
 
   03 Aug 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
